--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
-    "animate.css": "^3.5.2",
-    "vue-spinner": "^1.0.2"
+    "animate.css": "^3.5.2"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
